// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button - Unit test > color prop 1`] = `
<button
  className="button size-md  background-color-info"
  disabled={false}
/>
`;

exports[`Button - Unit test > disabled prop 1`] = `
<button
  className="button size-md  variant-outline"
  disabled={true}
/>
`;

exports[`Button - Unit test > onClick prop 1`] = `
<button
  className="button size-md  variant-outline"
  disabled={false}
  onClick={[Function]}
/>
`;

exports[`Button - Unit test > renders correctly 1`] = `
<button
  className="button size-md  variant-outline"
  disabled={false}
/>
`;

exports[`Button - Unit test > shadow prop 1`] = `
<button
  className="button size-md shadow-md variant-outline"
  disabled={false}
/>
`;

exports[`Button - Unit test > size prop 1`] = `
<button
  className="button size-md  variant-outline"
  disabled={false}
/>
`;

exports[`Button - Unit test > variant prop 1`] = `
<button
  className="button size-md  variant-solid"
  disabled={false}
/>
`;
